<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CleanDemo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_junk_clean">"Junk Clean"</string>
    <string name="title_app_boost">"Phone Boost"</string>
    <string name="memory_card_title">RAM</string>
    <string name="memory_total">Total: <b>%1$d</b></string>
    <string name="memory_usage">"Used: <b>%1$d</b>"</string>
    <string name="storage_card_title">Storage</string>
    <string name="storage_total">Total: <b>%1$d</b></string>
    <string name="storage_usage">Used: <b>%1$d</b>"</string>
    <string name="junk_card_title">Junk</string>
    <string name="junk_total">%1$d M</string>
    <string name="junk_memory">Memory: <b>%1$d M</b></string>
    <string name="junk_scan_info">Scanning:  %1$s "</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="junk_type_memory">Memory Boost</string>
    <string name="junk_type_files">System Cache</string>
    <string name="junk_type_application_junk">Application Junk</string>
    <string name="junk_type_useless_installer">Useless Installers</string>
    <string name="junk_type_residual">Residual Files</string>
    <string name="junk_type_adverts">Adverts</string>
</resources>
