<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="2dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginBottom="8dp"
    android:layout_marginTop="8dp"
    android:foreground="?android:attr/selectableItemBackground">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="8dp"
            android:layout_gravity="bottom"
            android:text="@string/memory_card_title"
            android:textColor="@color/primary_text_default_material_light"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="1"
            android:fontFamily="sans-serif-light"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_below="@+id/title"
            android:background="@color/accent"/>

        <TextView
            android:id="@+id/progress_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="16dp"
            android:textSize="80sp"
            android:gravity="center"
            android:text="20"
            android:textColor="@color/primary_text_default_material_light"
            android:fontFamily="sans-serif-thin"
            />

        <TextView
            android:id="@+id/percent_usage_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_toRightOf="@+id/progress_indicator"
            android:layout_alignBaseline="@+id/progress_indicator"
            android:textSize="40sp"
            android:gravity="center"
            android:text="%"
            android:textColor="@color/primary_text_default_material_light"
            android:fontFamily="sans-serif-thin"
            />

        <TextView
            android:id="@+id/total_memory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/progress_indicator"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:gravity="center"
            android:text="@string/memory_total"
            android:textColor="@color/primary_text_default_material_light"
            />

        <TextView
            android:id="@+id/used_memory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_alignLeft="@+id/total_memory"
            android:layout_alignBaseline="@+id/progress_indicator"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:gravity="center"
            android:text="@string/memory_usage"
            android:textColor="@color/primary_text_default_material_light"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_below="@+id/progress_indicator"
            android:layout_alignParentRight="true"
            android:background="?android:attr/selectableItemBackground"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:text="详情"
            android:textColor="@color/accent_material_light"/>
    </RelativeLayout>

</android.support.v7.widget.CardView>